--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,21 +2,27 @@ apply plugin: "com.android.application"
 apply plugin: "kotlin-android"
 apply plugin: 'kotlinx-serialization'
 apply plugin: "kotlin-kapt"
+apply plugin: "androidx.navigation.safeargs.kotlin"
 
 
 android {
     compileSdkVersion 30
-    viewBinding {
+
+    /*viewBinding {
         enabled = true
     }
+    */
     defaultConfig {
         applicationId "com.example.android.directoryCompanies"
-        minSdkVersion 17
+        minSdkVersion 19
         targetSdkVersion 30
         multiDexEnabled true
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+    buildFeatures{
+        viewBinding = true
     }
     buildTypes {
         release {
@@ -38,7 +44,7 @@ kapt {
 dependencies {
     def work_version = "2.5.0"
     def multidex_version = "2.0.1"
-    def retrofit = "2.5.0"
+    def retrofit = "2.6.4"
     def loggingInterceptor =  "4.2.1"
 
     // Kotlin + coroutines
@@ -58,8 +64,16 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.3'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.3'
+
+    def nav_version = "2.3.3"
+
+    // Kotlin
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    // Feature module Support
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+    // Testing Navigation
+    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
 
     implementation 'androidx.room:room-runtime:2.2.6'
     implementation 'androidx.room:room-rxjava2:2.2.6'
@@ -68,7 +82,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'androidx.fragment:fragment-ktx:1.1.0'
+    implementation 'androidx.fragment:fragment-ktx:1.3.0'
     implementation "io.reactivex.rxjava2:rxkotlin:2.1.0"
     implementation "com.squareup.retrofit2:converter-gson:2.3.0"
     implementation 'com.squareup.picasso:picasso:2.71828'
@@ -79,8 +93,6 @@ dependencies {
     implementation "androidx.multidex:multidex:$multidex_version"
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.0")
     implementation "androidx.lifecycle:lifecycle-reactivestreams-ktx:2.2.0"
-
-
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
     // Retrofit for networking
@@ -89,11 +101,6 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:$loggingInterceptor"
     implementation "com.squareup.okhttp3:logging-interceptor:$loggingInterceptor"
 
-
     implementation "com.google.dagger:dagger:2.27"
     kapt 'com.google.dagger:dagger-compiler:2.27'
-
-    implementation("com.github.terrakok:cicerone:6.6")
-
-
 }
